- Makefile bios/68040_pmmu.S bios/processor.S include/config.h: Added
  experimental support for 68040 PMMU initialization. This does the same as
  set_mmu.prg, which is now useless. Contributed by Miro Kropáček. (VRI)

2013-02-01
- aes/gemobed.c: Always center dialogs, even with high resolutions. (VRI)
- desk/desktop.rsc po/*.po: Display doc\license.txt with \ in about box. (VRI)
- bios/initinfo.c: Center the initinfo screen vertically. (VRI)
- bios/acsi.c bios/floppy.c bios/processor.h bios/processor.S
  include/asmdefs.h: Fix bug: caches were not flushed/invalidated when
  DMA was used. (RFB)
- bios/lineainit.c bios/lineavars.h vdi/vdi_misc.c vdi/vdi_tblit.S
  vdi/vdi_tblit_cf.S: Fixed Hatari extended VDI screens in ST mode. (VRI)

2013-02-02
- po/it.po: Updated. Contributed by Lodovico Zanier. (VRI)
- bios/startup.S: Removed Hatari workaround, since the RESET instruction is not
  used anymore in emutos-ram. (VRI)
- bios/ikbd.c bios/panicasm.S bios/screen.c include/kprint.h: Added
  warm_reset() to restart the current OS. (VRI)

2013-02-03
- bios/bios.c bios/panicasm.S bios/tosvars.h bios/tosvars.S include/config.h:
  Added proper warm boot detection on the FireBee and in emutos-ram.
- po/ru.po: Updated. Contributed by Dima Sobolev. (VRI)
- bios/machine.c: Fixed crash of emutos-ram on machines without SCC. (VRI)
- bios/vt52.c: Fixed vt52_init() and Setscreen() to clear the screen. (VRI)
- bios/bios.c bios/initinfo.c bios/initinfo.h: Removed initscreen(). (VRI)
- bdos/proc.c bios/acsi.c bios/floppy.c bios/processor.h bios/processor.S:
  Renamed the CPU cache management functions(). (VRI)
- bios/processor.S: Implemented data cache functions for ColdFire. (VRI)
- bios/initinfo.S: Remove useless initinfo scroll on RGB monitors. (VRI)
- bios/floppy.c: Added cache management for loading bootsector. (VRI)
- bios/disk.c: Limited byteswap support to IDE devices. (VRI)

2013-02-05
- po/es.po: Updated. Contributed by David Gálvez. (VRI)